trying to fix spacing between home and about sections on different size screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -299,7 +299,7 @@ main #home {
   }
 
   #about {
-    margin-top: calc(300px);
+    margin-top: calc(100px);
   }
 
   .about-info {
